@@ -11,7 +11,7 @@ libgncmodule_la_LIBADD = \
   ${G_WRAP_LINK_ARGS} \
   ${GLIB_LIBS} \
   ${GUILE_LIBS} \
- -lltdl
+  -lltdl
 
 libgw_gnc_module_la_SOURCES = gw-gnc-module.c
 libgw_gnc_module_la_DEPENDENCIES = libgncmodule.la
